--- a/Routingtemplatedemo/Views/Home/Index.cshtml
+++ b/Routingtemplatedemo/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<string> 
+﻿@using Routingtemplatedemo.Database
+@model List<Product> 
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -7,7 +8,9 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
-@foreach(string naam in Model)
+@foreach(Product p in Model)
 {
-  <p>@naam</p>
+  
+  <p class="product">@p.Naam - @p.Prijs - @p.Eenheid</p>
+
 }
